<resources>
    <string name="app_name">SOCOpeningMenu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to Settlers of Catan!</string>
    <string name="tutorial">START\nTUTORIAL</string>
    <string name="new_game">NEW\nGAME</string>
    <string name="settings">SETTINGS</string>
    <string name="statistics">STATISTICS</string>
    <string name="enabled">ENABLED</string>
    <string name="disabled">DISABLED</string>
    <string name="nice_mode_str">Nice Beginning?</string>
    <string name="hard_mode_str">Hard Mode?</string>
    <string name="back">BACK</string>
    <string name="title_activity_new_game">newGameActivity</string>
    <string name="new_game_options">New Game Options</string>

    <string name="random_map">Randomize map?</string>
    <string name="choose_color">Choose your color:</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="start_game">Start Game</string>
    <string name="choose_computers">Choose the amount of AI players:</string>
</resources>
